{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 97,
  "lineage": "a1f9f51e-788e-14db-9332-19995454fccb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029295afb9d34a856",
            "arn": "arn:aws:ec2:ap-south-1:149536481376:elastic-ip/eipalloc-029295afb9d34a856",
            "association_id": "eipassoc-03acc678b2f3aa2d8",
            "domain": "vpc",
            "id": "eipalloc-029295afb9d34a856",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0fb21f371177124a5",
            "private_dns": "ip-10-203-27-86.ap-south-1.compute.internal",
            "private_ip": "10.203.27.86",
            "public_dns": "ec2-13-232-191-249.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.191.249",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "NAT-Gateway-Public-IP",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "NAT-Gateway-Public-IP",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536481376:internet-gateway/igw-073d44fcc09438ad9",
            "id": "igw-073d44fcc09438ad9",
            "owner_id": "149536481376",
            "region": "ap-south-1",
            "tags": {
              "Name": "Internet-Gateway",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Internet-Gateway",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "vpc_id": "vpc-05bb10c0fea9a30ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.create-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029295afb9d34a856",
            "association_id": "eipassoc-03acc678b2f3aa2d8",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-041697e502568beb7",
            "network_interface_id": "eni-0fb21f371177124a5",
            "private_ip": "10.203.27.86",
            "public_ip": "13.232.191.249",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04f0f9ae785003179",
            "tags": {
              "Name": "NAT-Gateway",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "NAT-Gateway",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "vpc_id": "vpc-05bb10c0fea9a30ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-publicip",
            "aws_subnet.private_subnet",
            "aws_vpc.create-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536481376:route-table/rtb-00382b659b851a86d",
            "id": "rtb-00382b659b851a86d",
            "owner_id": "149536481376",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-041697e502568beb7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "private-route-table",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bb10c0fea9a30ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "149536481376",
            "id": "rtb-00382b659b851a86d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat-publicip",
            "aws_nat_gateway.ngw",
            "aws_subnet.private_subnet",
            "aws_vpc.create-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536481376:route-table/rtb-0870b0b1f172d90bf",
            "id": "rtb-0870b0b1f172d90bf",
            "owner_id": "149536481376",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073d44fcc09438ad9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "public-route-table",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bb10c0fea9a30ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "149536481376",
            "id": "rtb-0870b0b1f172d90bf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.create-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e24afa64d87eeff",
            "region": "ap-south-1",
            "route_table_id": "rtb-00382b659b851a86d",
            "subnet_id": "subnet-04f0f9ae785003179"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-publicip",
            "aws_nat_gateway.ngw",
            "aws_route_table.private-route",
            "aws_subnet.private_subnet",
            "aws_vpc.create-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0480684f74fa83843",
            "region": "ap-south-1",
            "route_table_id": "rtb-00382b659b851a86d",
            "subnet_id": "subnet-0613cafed52b3a484"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-publicip",
            "aws_nat_gateway.ngw",
            "aws_route_table.private-route",
            "aws_subnet.private_subnet",
            "aws_vpc.create-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc9ec12f1eb67263",
            "region": "ap-south-1",
            "route_table_id": "rtb-00382b659b851a86d",
            "subnet_id": "subnet-0e2bac88ea20f3ca9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-publicip",
            "aws_nat_gateway.ngw",
            "aws_route_table.private-route",
            "aws_subnet.private_subnet",
            "aws_vpc.create-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02569116cc2b91ae9",
            "region": "ap-south-1",
            "route_table_id": "rtb-0870b0b1f172d90bf",
            "subnet_id": "subnet-077933cf4bc342a4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route",
            "aws_subnet.public_subnet",
            "aws_vpc.create-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0624195c967631470",
            "region": "ap-south-1",
            "route_table_id": "rtb-0870b0b1f172d90bf",
            "subnet_id": "subnet-069392f27e4310aed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route",
            "aws_subnet.public_subnet",
            "aws_vpc.create-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dad8cb837e1ab2e7",
            "region": "ap-south-1",
            "route_table_id": "rtb-0870b0b1f172d90bf",
            "subnet_id": "subnet-02ae1cc39d81e9066"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route",
            "aws_subnet.public_subnet",
            "aws_vpc.create-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536481376:subnet/subnet-04f0f9ae785003179",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.203.24.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f0f9ae785003179",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536481376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private-subnet-1",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "vpc_id": "vpc-05bb10c0fea9a30ee"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "149536481376",
            "id": "subnet-04f0f9ae785003179",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.create-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536481376:subnet/subnet-0613cafed52b3a484",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.203.32.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0613cafed52b3a484",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536481376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private-subnet-2",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "private-subnet-2",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "vpc_id": "vpc-05bb10c0fea9a30ee"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "149536481376",
            "id": "subnet-0613cafed52b3a484",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.create-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536481376:subnet/subnet-0e2bac88ea20f3ca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.203.40.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2bac88ea20f3ca9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536481376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private-subnet-3",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "private-subnet-3",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "vpc_id": "vpc-05bb10c0fea9a30ee"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "149536481376",
            "id": "subnet-0e2bac88ea20f3ca9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.create-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536481376:subnet/subnet-077933cf4bc342a4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.203.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077933cf4bc342a4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536481376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet-1",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "vpc_id": "vpc-05bb10c0fea9a30ee"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "149536481376",
            "id": "subnet-077933cf4bc342a4b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.create-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536481376:subnet/subnet-069392f27e4310aed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.203.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069392f27e4310aed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536481376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet-2",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "public-subnet-2",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "vpc_id": "vpc-05bb10c0fea9a30ee"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "149536481376",
            "id": "subnet-069392f27e4310aed",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.create-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536481376:subnet/subnet-02ae1cc39d81e9066",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.203.16.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ae1cc39d81e9066",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536481376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet-3",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "public-subnet-3",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "vpc_id": "vpc-05bb10c0fea9a30ee"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "149536481376",
            "id": "subnet-02ae1cc39d81e9066",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.create-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "create-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536481376:vpc/vpc-05bb10c0fea9a30ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.203.0.0/16",
            "default_network_acl_id": "acl-05cfdaf5b2164807d",
            "default_route_table_id": "rtb-00b02e51f2f57ae66",
            "default_security_group_id": "sg-0a50124146b705f90",
            "dhcp_options_id": "dopt-0faac111f2d06ba48",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05bb10c0fea9a30ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b02e51f2f57ae66",
            "owner_id": "149536481376",
            "region": "ap-south-1",
            "tags": {
              "Name": "non-default-vpc",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "non-default-vpc",
              "Owner": "Nagarjuna SG",
              "Project": "Terraform-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "149536481376",
            "id": "vpc-05bb10c0fea9a30ee",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}